feat: FrankenPHP + Laravel Octaneの環境構築
## 変更内容

### インフラ構成
- FrankenPHP 1.10.1 (PHP 8.4) をベースイメージとして採用
- Laravel Octane (FrankenPHPサーバー) の設定を追加
- Docker Composeによるコンテナ化環境を構築

### 主な追加ファイル
- `infra/docker/php/Caddyfile`: HTTP設定（auto_https off、16スレッド）
- `infra/docker/php/startup-script.sh`: Octane起動スクリプト（4ワーカー、最大500リクエスト）
- `config/octane.php`: Laravel Octane設定ファイル
- `docs/SETUP_FRANKENPHP_OCTANE.md`: 日本語セットアップドキュメント
- `bin/compose`: Docker Compose便利スクリプト

### パフォーマンス設定
- ワーカー数: 4プロセス
- 最大リクエスト数: 500（メモリリーク対策）
- FrankenPHPスレッド数: 16
- ポート: 8000（コンテナ内部）→ 8080（ホスト）

### 環境変数
- `OCTANE_SERVER=frankenphp` を.envに追加
- PostgreSQL接続設定の更新（DB_HOST=postgres）

## 動作確認
- ✅ HTTP/1.1 200 OK
- ✅ Laravel セッション・CSRF トークン正常動作
- ✅ Octaneサーバー起動確認
- ✅ データベース接続確認

## メリット
- 従来のPHP-FPMと比較して数倍高速
- メモリ上にアプリケーションを保持し、起動コストを削減
- 複数ワーカーによる並行リクエスト処理
- Docker Composeでワンコマンド起動

--- a/compose.yml
+++ b/compose.yml
@@ -1,31 +1,30 @@
 services:
+  #--------------------------------------------------------------
+  # Application Service
   app:
+    container_name: surplus-eats-app
     build:
-      context: .
-      dockerfile: infra/docker/php/Dockerfile
+      context: ./infra/docker/php
+      dockerfile: Dockerfile
       args:
         - WEB_USER_ID=${WEB_USER_ID:-1000}
         - WEB_GROUP_ID=${WEB_GROUP_ID:-1000}
     user: "${WEB_USER_ID:-1000}:${WEB_GROUP_ID:-1000}"
-    container_name: surplus-eats-app
     volumes:
-      - .:/var/www/html
+      - ./:/app
     ports:
-      - "${APP_PORT:-8080}:8080"
-    depends_on:
-      - db
+      - "${APP_PORT:-8080}:8000"
 
-  db:
-    image: postgres:17
+  #--------------------------------------------------------------
+  # Database Service
+  postgres:
     container_name: surplus-eats-db
+    image: postgres:18.1
     environment:
       - POSTGRES_DB=${DB_DATABASE:-surplus_eats}
       - POSTGRES_USER=${DB_USERNAME:-root}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-password}
     volumes:
-      - dbdata:/var/lib/postgresql/data
+      - ./infra/docker/postgres:/var/lib/postgresql
     ports:
       - "${DB_PORT:-5432}:5432"
-
-volumes:
-  dbdata:
